--- a/PluginDemo/app/build.gradle
+++ b/PluginDemo/app/build.gradle
@@ -8,21 +8,36 @@ android {
         applicationId "com.didi.virtualapk.demo"
         minSdkVersion 15
         targetSdkVersion 15
+        versionName "1.0.0"
+        versionCode 1
+    }
+
+    productFlavors {
+        beijing {
+            applicationId 'com.didi.virtualapk.demo'
+        }
+        shanghai {
+            applicationId 'com.didi.virtualapk.demo'
+        }
     }
 
     buildTypes {
-        release {
+        debug {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            shrinkResources false
+        }
+        release {
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:22.2.0'
-
     // the following aars are also compiled in host project, so they will be filterd when build plugin apk.
     // but, wo can still visit their Class and Resources.
+    compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.didi.virtualapk:core:1.1.4.8'
 }
 
@@ -30,6 +45,6 @@ apply plugin: 'com.didi.virtualapk.plugin'
 
 virtualApk {
     packageId = 0x6f // the package id of Resources.
-    targetHost = '../../VirtualAPK/app' // the path of host project.
+    targetHost = '../../VirtualAPK/app' // the path of application module in host project.
     applyHostMapping = true //optional, default value: true.
 }
