--- a/CoreLibrary/build.gradle
+++ b/CoreLibrary/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.library'
 
+version = "0.0.1"
+
 android {
     compileSdkVersion 22
     buildToolsVersion "23.0.3"
@@ -8,7 +10,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 15
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
     }
     buildTypes {
         release {
@@ -24,8 +26,6 @@ android {
     }
 }
 
-apply plugin: 'maven'
-
 repositories {
     mavenCentral()
     jcenter()
@@ -40,20 +40,4 @@ dependencies {
     testCompile 'junit:junit:4.12'
 }
 
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            pom.project {
-                groupId project.GROUP_ID
-                artifactId project.ARTIFACT_ID
-                version project.VERSION
-            }
-            repository(url: project.RELEASE_REPOSITORY_URL) {
-                authentication(userName: project.USERNAME, password: project.PASSWORD)
-            }
-            snapshotRepository(url: project.SNAPSHOT_REPOSITORY_URL) {
-                authentication(userName: project.USERNAME, password: project.PASSWORD)
-            }
-        }
-    }
-}
+apply from: 'upload.gradle'
