--- a/CoreLibrary/upload.gradle
+++ b/CoreLibrary/upload.gradle
@@ -9,6 +9,10 @@ def siteUrl = 'https://github.com/didi/VirtualAPK' // 项目的主页
 def gitUrl = 'https://github.com/didi/VirtualAPK' // Git仓库的url
 
 group = GROUP_ID
+archivesBaseName = 'core'
+
+version = "0.0.1"
+
 
 install {
     repositories.mavenInstaller {
