--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile project (":CoreLibrary")
-    //compile 'com.didi.virtualapk:core:1.1.4.8'
+
+    compile 'com.didi.virtualapk:core:1.0.0'
+
+    //compile project (":CoreLibrary")
+
 }
